Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1>
 <a id="--是一款免费开源的java微信公众账号开发平台" class="anchor" href="#--%E6%98%AF%E4%B8%80%E6%AC%BE%E5%85%8D%E8%B4%B9%E5%BC%80%E6%BA%90%E7%9A%84java%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E8%B4%A6%E5%8F%B7%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>  （是一款免费开源的JAVA微信公众账号开发平台）</h1>
 
-<p>当前最新版本： 2.4.1（发布日期：20160822）</p>
+<p>当前最新版本： 2.4.2（发布日期：20160912）</p>
 
 <p><img src="http://img.blog.csdn.net/20140706133601296?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvemhhbmdkYWlzY290dA==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
 <br>平台介绍：</p>
@@ -33,25 +33,27 @@
 <h2>
 <a id="一简介" class="anchor" href="#%E4%B8%80%E7%AE%80%E4%BB%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>一、简介</h2>
 
-<p>Jeewx是一个开源、高效、敏捷的微信开发平台，采用JAVA语言基于Jeecg快速开发框架实现，Jeewx实现了微信平台的基础功能，便于用户二次开发。jeewx采用微服务框架，插件开发方式实现微信功能，不同的插件实现不同的微信功能。
- 升级说明： JEEWX后续升级，会采用插件方式，当前已经推出“微信企业号插件”，更多插件敬请期待。。
-【更多插件：微信公众号、微信企业号、支付服务窗、QQ公众号、微博等】</p>
+<p>Jeewx是一个开源、免费的微信管家系统，采用JAVA语言基于Jeecg框架实现，支持微信公众号，支持微信企业号。Jeewx实现了微信系统的基础功能，便于用户二次开发。Jeewx采用微服务框架，插件开发模式，JEEWX已推插件“微信企业号”。
+【更多插件敬请期待：微信公众号、微信企业号、支付服务窗、QQ公众号、微博等】</p>
 
 <h2>
-<a id="主要特性" class="anchor" href="#%E4%B8%BB%E8%A6%81%E7%89%B9%E6%80%A7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>主要特性</h2>
+<a id="二主要特性" class="anchor" href="#%E4%BA%8C%E4%B8%BB%E8%A6%81%E7%89%B9%E6%80%A7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>二、主要特性</h2>
 
 <ul>
-<li>  1、JEEWX 基于快速开发平台jeecg 3.4.4 版本开发，采用SpringMVC+Hibernate4+UI库+代码生成器+Jquery+Ehcache等主流架构技术</li>
-<li>  2、支持企业快速开发，完善的用户组织机构，报表，强大的代码生成器快速有效的提高开发效率</li>
-<li>  3、开源免费，jeewx遵循Apache2开源协议,免费提供使用。</li>
+<li>  1、JEEWX基于快速开发平台jeecg 3.4.4 版本开发，采用Springmvc+Hibernate+Bootstrap+Velicity等主流架构技术</li>
+<li>  2、支持企业快速开发，完善的用户组织机构，报表，强大的代码生成器，有效的提高开发效率</li>
+<li>  3、开源免费，jeewx遵循Apache2开源协议。</li>
 <li>  4、支持微信公众号管理（针对：微信公众订阅号、微信公众号服务号）</li>
 <li>  5、支持微信企业号管理（针对：微信企业号）</li>
 <li>  6、详细的二次开发文档，并不断更新增加相关开发案例提供学习参考</li>
-<li>  9、采用微服务架构jeecg-p3，支持微信功能插件化开发，更易于定制和二次开发</li>
+<li>  9、采用微服务架构Jeecg-p3，支持插件化开发，更易于集成</li>
 </ul>
 
 <h2>
-<a id="主要功能" class="anchor" href="#%E4%B8%BB%E8%A6%81%E5%8A%9F%E8%83%BD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>主要功能</h2>
+<a id="三系统主要功能" class="anchor" href="#%E4%B8%89%E7%B3%BB%E7%BB%9F%E4%B8%BB%E8%A6%81%E5%8A%9F%E8%83%BD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>三、系统主要功能</h2>
+
+<h2>
+<a id="模块一微信公众号" class="anchor" href="#%E6%A8%A1%E5%9D%97%E4%B8%80%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%8F%B7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>【模块一：微信公众号】</h2>
 
 <ul>
 <li>  1，微信接口认证</li>
@@ -80,7 +82,7 @@
 </ul>
 
 <h2>
-<a id="jeewx企业号平台独立插件模块" class="anchor" href="#jeewx%E4%BC%81%E4%B8%9A%E5%8F%B7%E5%B9%B3%E5%8F%B0%E7%8B%AC%E7%AB%8B%E6%8F%92%E4%BB%B6%E6%A8%A1%E5%9D%97" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>JEEWX企业号平台（独立插件模块）</h2>
+<a id="模块二微信企业号" class="anchor" href="#%E6%A8%A1%E5%9D%97%E4%BA%8C%E5%BE%AE%E4%BF%A1%E4%BC%81%E4%B8%9A%E5%8F%B7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>【模块二：微信企业号】</h2>
 
 <ul>
 <li>  1，微信企业号管理</li>
@@ -97,16 +99,16 @@
 </ul>
 
 <h2>
-<a id="开发环境" class="anchor" href="#%E5%BC%80%E5%8F%91%E7%8E%AF%E5%A2%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>开发环境</h2>
+<a id="四开发环境" class="anchor" href="#%E5%9B%9B%E5%BC%80%E5%8F%91%E7%8E%AF%E5%A2%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>四、开发环境</h2>
 
-<p>eclipse + maven + jdk7 + tomcat6 + mysql_5.0.37 （注意： 不支持jdk8;）</p>
+<p>eclipse + maven + jdk7 + tomcat6 + mysql_5.0.37 （注意：不支持jdk8）</p>
 
 <h2>
-<a id="系统安装" class="anchor" href="#%E7%B3%BB%E7%BB%9F%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>系统安装</h2>
+<a id="五系统安装" class="anchor" href="#%E4%BA%94%E7%B3%BB%E7%BB%9F%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>五、系统安装</h2>
 
 <ul>
 <li>  1、将项目采用maven方式导入eclipse中，通过maven下载项目依赖。</li>
-<li>  2、采用Mysql手工创建数据库jeewx 采用UTF-8编码，执行捷微数据初始化SQL脚本 ：doc/db/jeewx-2.4.1.sql</li>
+<li>  2、采用Mysql手工创建数据库jeewx 采用UTF-8编码，执行JEEWX数据初始化SQL脚本 ：doc/db/jeewx-mysql.sql</li>
 <li>  3、采用maven方式启动项目，首次在浏览器中访问 http://localhost:8080/jeewx/，默认admin登录，一个账号只能配置一个微信公众账号。</li>
 <li>  4、微信域名配置（重要）</li>
 <li>     修改：src/main/resources/sysConfig.properties</li>
@@ -120,12 +122,12 @@
 </ul>
 
 <h2>
-<a id="技术交流" class="anchor" href="#%E6%8A%80%E6%9C%AF%E4%BA%A4%E6%B5%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>技术交流</h2>
+<a id="六技术交流" class="anchor" href="#%E5%85%AD%E6%8A%80%E6%9C%AF%E4%BA%A4%E6%B5%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>六、技术交流</h2>
 
 <ul>
 <li>  论 坛:  <a href="http://www.jeecg.org">www.jeecg.org</a>
 </li>
-<li>  QQ 群:  ④289709451、①287090836（满）、③175449166（满）、②129190229（满）</li>
+<li>  QQ 群:  ①287090836、③175449166、②129190229、④289709451</li>
 <li>  官 网:  <a href="http://www.jeewx.com">www.jeewx.com</a>
 </li>
 <li>  邮 箱： <a href="mailto:jeecg@sina.com">jeecg@sina.com</a>
@@ -133,7 +135,7 @@
 </ul>
 
 <h2>
-<a id="技术文档" class="anchor" href="#%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>技术文档</h2>
+<a id="七技术文档" class="anchor" href="#%E4%B8%83%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>七、技术文档</h2>
 
 <ul>
 <li><a href="http://blog.csdn.net/zhangdaiscott/article/details/50950739">JEEWX 系统操作手册</a></li>
@@ -145,29 +147,25 @@
 </ul>
 
 <h2>
-<a id="商业版介绍" class="anchor" href="#%E5%95%86%E4%B8%9A%E7%89%88%E4%BB%8B%E7%BB%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>商业版介绍</h2>
+<a id="八在线体验" class="anchor" href="#%E5%85%AB%E5%9C%A8%E7%BA%BF%E4%BD%93%E9%AA%8C" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>八、在线体验</h2>
 
 <ul>
 <li>  在线演示: <a href="http://www.jeewx.com/jeewx">http://www.jeewx.com/jeewx</a>
 </li>
-<li>  体验账号：ceshi/123456 (可注册)</li>
-<li>  JEEWX官网：<a href="http://www.jeewx.com">www.jeewx.com</a>
+<li>
+<p>体验账号：ceshi/123456 (可注册)</p>
+
+<p>官方公众号："JEECG"  "H5互动汇"
+<img src="http://img.blog.csdn.net/20160323155143399?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
+<img src="http://img.blog.csdn.net/20160323154916164?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx"></p>
 </li>
 </ul>
 
 <h2>
-<a id="体验公众号-" class="anchor" href="#%E4%BD%93%E9%AA%8C%E5%85%AC%E4%BC%97%E5%8F%B7-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>体验公众号 </h2>
-
-<pre><code>官方公众号："JEECG"  "H5互动汇"
-</code></pre>
-
-<p><img src="http://img.blog.csdn.net/20160323155143399?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
-<img src="http://img.blog.csdn.net/20160323154916164?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx"></p>
-
-<h2>
 <a id="系统截图-" class="anchor" href="#%E7%B3%BB%E7%BB%9F%E6%88%AA%E5%9B%BE-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>系统截图 </h2>
 
-<p><img src="http://img.blog.csdn.net/20160822173828381?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
+<p><img src="http://img.blog.csdn.net/20160908175834009?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
+<img src="http://img.blog.csdn.net/20160822173828381?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
 <img src="http://img.blog.csdn.net/20160822173833177?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
 <img src="http://img.blog.csdn.net/20160323152508827?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
 <img src="http://img.blog.csdn.net/20160323153059001?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center" alt="github" title="jeewx">
